Configuracion para creacion de tablas y datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=dwese-proyecto-aovmae-webapp-aovmae
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=${DB_DRIVER}
 
-spring.config.import=optional:file:.env[.properties]
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.defer-datasource-initialization=true
 
+spring.datasource.hikari.initialization-fail-timeout=60000
+spring.datasource.hikari.connection-timeout=60000
