--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,31 @@
+
 services:
+
   db:
-    image: mariadb:latest
+    image: mariadb:12
+    container_name: digitaltrust-db
     environment:
-      MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-      MARIADB_DATABASE: ${DB_DATABASE}
-      MARIADB_USER: ${DB_USER}
-      MARIADB_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: 2511
+      MYSQL_DATABASE: digitaltrust
+      MYSQL_USER: aov
+      MYSQL_PASSWORD: 2511
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
 
+  app:
+    build: .
+    container_name: digitaltrust-app
+    depends_on:
+      - db
+    environment:
+      DB_URL: jdbc:mariadb://db:3306/digitaltrust
+      DB_USER: aov
+      DB_PASSWORD: 2511
+      DB_DRIVER: org.mariadb.jdbc.Driver
+    ports:
+      - "8080:8080"
 
 volumes:
   db_data:
