--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=${DB_DRIVER}
 
+# Indica cual es el fichero de las variables de entorno
+spring.config.import=optional:file:.env[.properties]
+
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
